[workspace]
resolver = "2"
members = [
  "crypto_hash_argon2",
  "crypto_hash_bcrypt",
  "crypto_hash_scrypt",
  "json_jsonpath"
]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1"
serde_json_path = "0.6"
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6", features = ["std"] }
js-sys = "0.3"
argon2 = "0.5"
bcrypt = "0.15"
scrypt = "0.11"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
