[package]
name = "deno_stdext_crypto_hash_wasm_argon2"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.92"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
js-sys = "0.3"
